# llm-training

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  generate.py  model.py  pyproject.toml  requirements.txt  train_tokenizer.py  train_wizard.py
configs/: default.yaml
docker/: entrypoint.sh  run-auto.sh
llm_trainer/: __main__.py  cli.py  config.py
llm_trainer/data/: cache.py  hf_loader.py  local_txt.py
llm_trainer/export/: gguf.py
llm_trainer/model/: transformer.py
llm_trainer/tokenizer/: spm.py
llm_trainer/train/: checkpoint.py  loop.py
tests/: test_cache.py  test_checkpoint.py  test_config.py  test_export_gguf.py  test_hf_loader.py  test_local_txt.py  test_tokenizer_chunking.py  test_training_utils.py
